--- a/package.json
+++ b/package.json
@@ -59,11 +59,12 @@
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "10.3.3",
-    "@grafana/runtime": "10.3.3",
-    "@grafana/schema": "10.3.3",
-    "@grafana/ui": "10.3.3",
-    "@types/react": "^18.3.2",
+    "@grafana/data": "11.0.0",
+    "@grafana/experimental": "^1.7.11",
+    "@grafana/runtime": "11.0.0",
+    "@grafana/schema": "11.0.0",
+    "@grafana/ui": "11.0.0",
+    "@types/react": "^18.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "2.5.3"
