--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mux-datasource",
   "version": "1.0.0",
-  "description": "Mux video streaming metrics datasource",
+  "description": "MUX video streaming metrics datasource",
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
