--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "npm run lint -- --fix",
     "e2e": "playwright test",
-    "server": "docker-compose up --build",
+    "server": "docker compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest"
   },
   "author": "Arabian9ts",
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@grafana/eslint-config": "^7.0.0",
-    "@grafana/plugin-e2e": "^1.0.1",
-    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@grafana/plugin-e2e": "^1.11.2",
+    "@grafana/tsconfig": "^2.0.0",
     "@playwright/test": "^1.41.2",
     "@swc/core": "^1.3.90",
     "@swc/helpers": "^0.5.0",
@@ -28,8 +28,8 @@
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.0",
-    "@types/lodash": "^4.14.194",
     "@types/node": "^20.8.7",
+    "@types/react": "^18.3.12",
     "@types/react-router-dom": "^5.2.0",
     "@types/testing-library__jest-dom": "5.14.8",
     "copy-webpack-plugin": "^11.0.0",
@@ -39,32 +39,36 @@
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "glob": "^10.2.7",
     "identity-obj-proxy": "3.0.0",
+    "imports-loader": "^5.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "1.63.2",
     "sass-loader": "13.3.1",
+    "semver": "^7.6.3",
     "style-loader": "3.3.3",
     "swc-loader": "^0.2.3",
-    "ts-node": "^10.9.1",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "4.8.4",
-    "webpack": "^5.86.0",
+    "typescript": "5.5.4",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-livereload-plugin": "^3.0.2"
+    "webpack-livereload-plugin": "^3.0.2",
+    "webpack-subresource-integrity": "^5.1.0",
+    "webpack-virtual-modules": "^0.6.2"
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "11.0.0",
-    "@grafana/experimental": "^1.7.11",
-    "@grafana/runtime": "11.0.0",
-    "@grafana/schema": "11.0.0",
-    "@grafana/ui": "11.0.0",
-    "@types/react": "^18.3.3",
+    "@grafana/data": "^11.3.0",
+    "@grafana/experimental": "^2.1.2",
+    "@grafana/runtime": "^11.3.0",
+    "@grafana/schema": "^11.3.0",
+    "@grafana/ui": "^11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "2.5.3"
