--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,4 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: grafana/plugin-actions/build-plugin@release
+      - uses: pnpm/action-setup@v4
+      - uses: grafana/plugin-actions/build-plugin@main
+        with:
+          policy_token: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
